[gd_scene load_steps=5 format=2]

[ext_resource path="res://tileset/GUI/background/background.jpg" type="Texture" id=1]
[ext_resource path="res://tileset/GUI/button/button_unpressed_rough.png" type="Texture" id=2]
[ext_resource path="res://scripts/start_scene.gd" type="Script" id=3]
[ext_resource path="res://tileset/GUI/button/button_pressed_rough.png" type="Texture" id=4]

[node name="choose_save" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_left = -1.05264
margin_right = 798.947
margin_bottom = 500.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="save_1" type="TextureButton" parent="Panel"]
margin_left = 68.0
margin_top = 60.0
margin_right = 268.0
margin_bottom = 372.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_1" type="Label" parent="Panel/save_1"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0
text = "SAVE 1"

[node name="save_2" type="TextureButton" parent="Panel"]
margin_left = 320.0
margin_top = 60.0
margin_right = 520.0
margin_bottom = 372.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_2" type="Label" parent="Panel/save_2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0
text = "SAVE 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_3" type="TextureButton" parent="Panel"]
margin_left = 558.0
margin_top = 60.0
margin_right = 743.0
margin_bottom = 372.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_3" type="Label" parent="Panel/save_3"]
margin_left = 19.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 34.0
text = "SAVE 3"
[connection signal="pressed" from="Panel/save_1" to="Panel" method="_on_save_1_pressed"]
